feat: replaced swagger-ui with scaler
